@@ -14,13 +14,7 @@ include(CalamaresAddTranslations)
 add_subdirectory(libcalamares)
 add_subdirectory(libcalamaresui)
 
-if(WITH_QT6)
-  # all things qml
-  add_subdirectory(qml/calamares-qt6)
-else()
-  # all things qml
-  add_subdirectory(qml/calamares-qt5)
-endif()
+add_subdirectory(qml)
 
 # application
 add_subdirectory(calamares)
