@@ -10,9 +10,12 @@ the history of the 3.2 series (2018-05 - 2022-08).
 # 3.3.2 (unreleased)
 
 This release contains contributions from (alphabetically by first name):
- - nobody, yet!
+ - Adriaan de Groot
+ - Jonathan Riddell
 
 ## Core ##
+ - Slideshow support code (QML) now ported to Qt and made available
+   as two separate directories of support-code. (thanks Jon)
 
 ## Modules ##
 
